# candybot_ros

./: Dockerfile  README.md  candybot.launch  docker-compose.yaml
candybot_apps/: CMakeLists.txt  package.xml  setup.py
candybot_apps/launch/: speech.launch
candybot_apps/nodes/: candybot_audio.py  candybot_speech.py
